Update README with net ids

--- a/router/README
+++ b/router/README
@@ -1,4 +1,4 @@
-## Lab 3 RIP README
+## Lab 3 RIP README (Aryan Mathur am943, Miles Yang mjy9, John Yoo jsy12, Linnea Kuruvilla lck21)
 
 We have all the code written for implementing the required functions for lab 3, however we currently are not passing any testcases. Below is a description of what he have written, tried to debug, and any other relevant information for each function.
 
